assets/styles/components/header.scss
@import "../_base/typography";
@import "../_base/variables";
@import "bootstrap/scss/_functions";
@import "bootstrap/scss/_variables";
@import "bootstrap/scss/mixins/_breakpoints";

.navbar {
    display: flex;
    justify-content: space-between;
    padding: 24px 0;
    position: fixed;
    z-index: 10;
    top: 0;
    left: 0;
    width: 100%;
    transition: background 0.15s linear, box-shadow 0.15s linear, padding 0.15s linear;

    &--shrink {
        background-color: var(--white);
        padding: 8px 0;
        box-shadow: 0px 2px 10px rgba(var(--light-black), 0.09);
        border-bottom: 1px solid rgba(var(--dum-grey), .4);

        @include media-breakpoint-down(sm) {
            padding: 8px 0 !important;
        }
    }

    @include media-breakpoint-down(md) {
        padding: 12px 0px;
        mix-blend-mode: normal;
        background-color: var(--white);
    }

    &__logo {
        @include font-size($font-xx-big);
        font-weight: $font-weight--bold;
        text-decoration: none;
        display: flex;
        align-items: center;
        color: var(--light-black);
        gap: 8px;
        letter-spacing: 1px;

        @include media-breakpoint-down(sm) {
            @include font-size($font-medium);
        }

        svg {
            height: 24px;
            position: relative;
            left: 10px;
            top: 7px;

            @include media-breakpoint-down(md) {
                height: 32px;
            }
        }
    }

    &__burger-btn {
        height: 36px;
        width: 36px;
        border: 1px solid var(--border-light);
        background-color: var(--bubble-white);
        display: flex;
        justify-content: center;
        align-items: center;
        padding: 0;
        border-radius: 100px;
        position: relative;

        span {
            height: 3px;
            width: 18px;
            background-color: var(--border-light);
            border-radius: 100px;
            position: absolute;
            transition: all 0.4s ease-in-out;

            &:nth-child(1) {
                top: 8px;
            }

            &:nth-child(2) {
                top: 15px;
            }

            &:nth-child(3) {
                top: 22px;
            }
        }

        &--open {
            height: 36px;
            width: 36px;
            border: none;
            background-color: var(--light-black);
            display: flex;
            justify-content: center;
            align-items: center;
            padding: 0;
            border-radius: 100px;
            position: absolute;
            right: 24px;
            top: 20px;
            z-index: 20;
            span {
                background-color: var(--bubble-white) !important;

                &:nth-child(1) {
                    top: 9px;
                    transform: translateY(7px) rotate(45deg);
                }

                &:nth-child(2) {
                    opacity: 0;
                }

                &:nth-child(3) {
                    top: 25px;
                    transform: translateY(-9px) rotate(-45deg);
                }
            }
        }
    }

    &__menu {
        @include media-breakpoint-down(lg) {
            position: absolute;
            border-radius: 12px;
            background-color: rgba(0, 0, 0, .4);
            padding: 92px 26px 54px;
            top: 10px;
            left: 15px;
            width: calc(100% - 30px);
            backdrop-filter: blur(55px);
        }

        &--active {
            display: block !important;
        }

        > div {
            position: relative;
        }

        ul {
            display: flex;
            padding: 0;
            margin: 0;
            list-style: none;
            gap: 44px;

            @include media-breakpoint-down(lg) {
                flex-direction: column;
                gap: 32px;
            }

            li {
                display: flex;
                align-items: center;
                overflow: hidden;
                color: var(--light-black);

                &:nth-child(1) a {
                    animation-delay: 0.1s;
                }
    
                &:nth-child(2) a {
                    animation-delay: 0.2s;
                }
    
                &:nth-child(3) a {
                    animation-delay: 0.3s;
                }
    
                &:not(.navbar__budget) {
                    @include font-size($font-regular);
                    font-weight: $font-weight--regular;
                    cursor: pointer;

                    @include media-breakpoint-down(md) {
                        @include font-size($font-large);
                        font-weight: $font-weight--bold;
                        margin-bottom: 0;
                        opacity: 0;
                        transform: translateY(100px);
                        animation: cascadeIn 0.9s ease forwards;
                    }
                }
                a {
                    text-decoration: none;
                    color: var(--light-black);
                }
            }
        }
    }

    &__budget-mobile {
        border: 1px solid var(--dum-grey);
        color: var(--light-black) !important;
        border-radius: 100px !important;
        position: relative;
        display: flex;
        align-items: center;
        padding: 6px 24px 6px 12px !important;
        @include font-size($font-x-small);

        &:after {
            content: "";
            position: absolute;
            right: 12px;
            width: 6px;
            height: 6px;
            background-color: $secondary;
            border-radius: 100px;
            animation: pulse 2s infinite;
    
        }
    }

    &__budget {

        a {
            padding: 10px 36px 10px 24px!important;
            border: 1px solid var(--dum-grey);
            color: var(--light-black) !important;
            border-radius: 100px !important;
            position: relative;
            display: flex;
            align-items: center;
            @include media-breakpoint-up(lg) {
                &:hover {
                    background-color: #ffff;
                    color: var(--background) !important;
                    border: 1px solid #ffffff !important;
                }
            }
    
            @include media-breakpoint-down(lg) {
                background-color: var(--light-black);
                border-color: var(--white) !important;
                color: var(--white) !important;
                justify-content: center;
                @include font-size($font-large);
                font-weight: $font-weight--medium;
                width: 100%;
                border-radius: 100px;
                padding: 12px 32px !important;
    
                &:hover {
                    background-color: $primary;
                    color: var(--white) !important;
                }
            }

            > div {
                background-color: #3498db;
                position: absolute;
                transition: transform 0.5s linear; 
            }
    
            &:after {
                content: "";
                position: absolute;
                right: 16px;
                width: 8px;
                height: 8px;
                background-color: $secondary;
                border-radius: 100px;
                animation: pulse 2s infinite;
    
                @include media-breakpoint-down(lg) {
                    content: initial;
                }
        
            }
        }





    }
}


@keyframes pulse {
    0% {
      transform: scale(0.95);
      box-shadow: 0 0 0 0 rgba(24, 217, 20, 0.7);
    }
    
    70% {
      transform: scale(1);
      box-shadow: 0 0 0 10px rgba(255, 255, 255, 0);
    }
    
    100% {
      transform: scale(0.95);
      box-shadow: 0 0 0 0 rgba(52, 152, 219, 0);
    }
  }

  @keyframes cascadeIn {
    from {
        opacity: 0;
        transform: translateY(100px);
    }

    to {
        opacity: 1;
        transform: translateY(0);
    }
}

